# textline-server

./: CMakeLists.txt  README.md
jni/: com_netease_mm_image_jni_OCR.cpp  com_netease_mm_image_jni_OCR.h  jpeg2Mat.h
modelpredict/: Layers.cpp  Layers.h  TextLineOCR.cpp  TextLineOCR.h  common.cpp  common.h  crnn.cpp  crnn.h  decode.h
params/: all_class_random.txt  bazel  t.py
qthreadpool/: ReqPackage.h  WorkerThread.cpp  WorkerThread.h  threadPool.cpp  threadPool.h
test/: test.cpp
tmp/: TextLineOCR.cpp  TextLineOCR.h  crnn.cpp  crnn.h
